Removed redundant new Array and removed unmmodifiable list warning